added logged in user email api
